--- a/src/app/dashboard/setting/setting.component.html
+++ b/src/app/dashboard/setting/setting.component.html
@@ -57,7 +57,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <button mat-raised-button (click)="generateToken()">Gerar Token</button>
+                                <button mat-raised-button class="btn btn-info" (click)="generateToken()">Gerar Token</button>
                             </div>
                         </div>
                     </div>
