--- a/src/app/dashboard/footer/footer.component.html
+++ b/src/app/dashboard/footer/footer.component.html
@@ -1,8 +1,7 @@
 <footer class="footer footer-dashboard">
     <div class="container-fluid">
         <div class="copyright pull-right">
-            &copy;
-            {{dateFooter | date: 'yyyy'}}, Storage Files
+            &copy; {{dateFooter | date: 'yyyy'}}, Storage Files
         </div>
     </div>
 </footer>
