--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+<div class="body-login">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info" style="height: 70px">
         <div class="container">
-            <a class="navbar-brand">Storage Files</a>
+            <a routerLink="/register/user" class="link">Storage Files</a>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -11,52 +11,46 @@
             </div>
         </div>
     </nav>
-    <div class="card-login">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="card-title">LOGIN</h3>
-                    </div>
-                    <div class="card-body">
-                        <form [formGroup]="formLogin" (submit)="login()">
-                            <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Email" type="email" name="email"
-                                            formControlName="email">
-                                    </mat-form-field>
-                                </div>
+    <div class="row card-login">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">LOGIN</h3>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="formLogin" (submit)="login()">
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Email" type="email" name="email"
+                                        formControlName="email">
+                                </mat-form-field>
                             </div>
-                            <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="Senha" type="password" name="password"
-                                            formControlName="password">
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12"
-                                    style="display: flex; justify-content: center">
-                                    <button mat-raised-button type="submit" class="btn btn-info">
-                                        Login
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                        </form>
-                    </div>
-                    <div class="card-footer" style="display: flex; justify-content: center">
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <a routerLink="/register/user" class="link">
-                                Não tem conta ?
-                            </a>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <a routerLink="/register" class="link">
-                                Esqueceu sua senha ?
-                            </a>
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Senha" type="password" name="password"
+                                        formControlName="password">
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 col-sm-12" style="display: flex; justify-content: center">
+                                <button mat-raised-button type="submit" class="btn btn-info">
+                                    Login
+                                </button>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                    </form>
+                </div>
+                <div class="card-footer" style="display: flex; justify-content: center">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <button class="button" type="submit" (click)="password()">
+                                Esqueceu a senha ?
+                            </button>
                         </div>
                     </div>
                 </div>
