--- a/src/app/register/header/register-header.component.html
+++ b/src/app/register/header/register-header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
+<nav class="navbar navbar-expand-lg navbar-light bg-info" style="height: 70px">
     <div class="container">
-        <a class="navbar-brand">Storage Files</a>
+        <a routerLink="/" style="color:white; font-size: 25px ">Storage Files</a>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
