update page register

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -60,7 +60,7 @@
                                 <div class="col-md-12" style="display: flex; justify-content: center">
                                     <button mat-raised-button type="submit" class="btn btn-info pull-right"
                                         [disabled]="buttonRegister">
-                                        Salvar
+                                        Enviar
                                     </button>
                                 </div>
                             </div>
